--- a/src/Creuna.Episerver.RedirectHandler.UnitTests/Creuna.Episerver.RedirectHandler.UnitTests.csproj
+++ b/src/Creuna.Episerver.RedirectHandler.UnitTests/Creuna.Episerver.RedirectHandler.UnitTests.csproj
@@ -163,6 +163,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\RedirectAttemptTests.cs" />
     <Compile Include="DictionaryCachedRedirecterTests.cs" />
     <Compile Include="RedirecterTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
