--- a/src/Creuna.Episerver.RedirectHandler.TestApp/Creuna.Episerver.RedirectHandler.TestApp.csproj
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/Creuna.Episerver.RedirectHandler.TestApp.csproj
@@ -56,10 +56,6 @@
       <HintPath>..\packages\Castle.Windsor.3.2.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Creuna.Episerver.RedirectHandler, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Creuna.Episerver.RedirectHandler.1.0.0\lib\net45\Creuna.Episerver.RedirectHandler.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -309,7 +305,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RedirectsInitializer.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="modules\_protected\Creuna.Episerver.RedirectHandler\Creuna.Episerver.RedirectHandler.csproj">
+      <Project>{dfbf0553-7e44-44bf-a59f-f94f9493fc17}</Project>
+      <Name>Creuna.Episerver.RedirectHandler</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="ClientResources\Images\icons\layoutIcons24x24.png" />
     <Content Include="ClientResources\Scripts\Editors\StringList.js" />
