--- a/src/Creuna.Episerver.RedirectHandler.TestApp/packages.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/packages.config
@@ -3,7 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="Castle.Core" version="3.2.0" targetFramework="net451" />
   <package id="Castle.Windsor" version="3.2.0" targetFramework="net451" />
-  <package id="Creuna.Episerver.RedirectHandler" version="1.0.0" targetFramework="net451" />
+  <!--<package id="Creuna.Episerver.RedirectHandler" version="1.0.0" targetFramework="net451" />-->
   <package id="EntityFramework" version="6.0.0" targetFramework="net451" />
   <package id="EPiServer.CMS" version="9.1.0" targetFramework="net451" />
   <package id="EPiServer.CMS.Core" version="9.1.0" targetFramework="net451" />
