--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
@@ -18,7 +18,7 @@
       <dependency id="EPiServer.CMS.Core" version="9.1.0" />
       <dependency id="EPiServer.CMS.UI.Core" version="9.2.0" />
     </dependencies>
-    <tags>EPiServer rediects</tags>
+    <tags>EPiServer redirects</tags>
   </metadata>
   <files>
     <file src="bin\$configuration$\Creuna.Episerver.RedirectHandler.dll" target="lib\net45\" />
