--- a/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
@@ -393,12 +393,13 @@
       </handlers>
     </system.webServer>
   </location>
-<bvn404Handler handlerMode="On" fileNotFoundPage="/notfound.aspx">
+<!--<bvn404Handler handlerMode="On" fileNotFoundPage="/notfound.aspx">
  	 	<providers>
- 	 	    <!--
+ 	 	    ~1~
  	 	        Register your own handler that will be given a chance to
  	 	        rewrite the url. The type must implement INotFoundHandler
  	 	        <add name="NameOfHandler" type="Your.Handler.Here" />
- 	 	     -->
+ 	 	     @1@
  	 	</providers>
- 	</bvn404Handler></configuration>
+ 	</bvn404Handler>-->
+</configuration>
