--- a/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
@@ -13,7 +13,8 @@
     <section name="episerver.shell" type="EPiServer.Shell.Configuration.EPiServerShellSection, EPiServer.Shell" />
     <section name="episerver.search" type="EPiServer.Search.Configuration.SearchSection, EPiServer.ApplicationModules" />
     <section name="episerver.packaging" type="EPiServer.Packaging.Configuration.EPiServerPackagingSection, EPiServer.Packaging" />
-    <section name="bvn404Handler" type="BVNetwork.NotFound.Configuration.Bvn404HandlerConfiguration, BVNetwork.EPi404" /></configSections>
+    <section name="bvn404Handler" type="BVNetwork.NotFound.Configuration.Bvn404HandlerConfiguration, BVNetwork.EPi404" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -150,31 +151,31 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Logging.Log4Net" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
@@ -182,44 +183,44 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.XForms" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.9.0.0" newVersion="9.9.0.0" />
       </dependentAssembly>
       <probing privatePath="modulesbin" />
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.2.0.0" newVersion="9.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.5.0.0" newVersion="9.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.2.0.0" newVersion="9.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.5.0.0" newVersion="9.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-9.2.0.0" newVersion="9.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-9.5.0.0" newVersion="9.5.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral" />
@@ -237,6 +238,18 @@
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-7.0.0.0" newVersion="7.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Core" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Castle.Windsor" publicKeyToken="407dd0808d44fbdc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Razor" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <episerver>
@@ -248,7 +261,7 @@
       </sizePresets>
     </imageEditor>
   </episerver>
-  <episerver.framework>
+  <episerver.framework updateDatabaseSchema="true">
     <appData basePath="App_Data" />
     <scanAssembly forceBinFolderScan="true" />
     <virtualRoles addClaims="true">
@@ -282,9 +295,7 @@
     <publicModules rootPath="~/modules/" autoDiscovery="Modules" />
     <protectedModules rootPath="~/EPiServer/">
       <add name="EPiServer.Packaging.UI" />
-      <add name="Shell" />
-      <add name="CMS" />
-    </protectedModules>
+    <add name="Shell" /><add name="CMS" /></protectedModules>
   </episerver.shell>
   <!-- 'Static' location added to configure for static files only -->
   <location path="Modules/_Protected">
@@ -375,7 +386,7 @@
   </system.serviceModel>
   <episerver.packaging protectedVirtualPath="~/EPiServer/" protectedPath="modules/_Protected" publicVirtualPath="~/modules/" publicPath="modules" installationMode="Code" />
   <connectionStrings>
-    <add name="EPiServerDB" connectionString="Data Source=(LocalDb)\v11.0;AttachDbFilename=|DataDirectory|EPiServerDB_c115cb30.mdf;Initial Catalog=EPiServerDB_c115cb30;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\source\Creuna.Episerver.RedirectHandler\src\Creuna.Episerver.RedirectHandler.TestApp\App_Data\EPiServerDB_c115cb30.mdf;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="Views/Plugins">
     <system.web>
@@ -393,12 +404,12 @@
       </handlers>
     </system.webServer>
   </location>
-<!--<bvn404Handler handlerMode="On" fileNotFoundPage="/notfound.aspx">
+  <!--<bvn404Handler handlerMode="On" fileNotFoundPage="/notfound.aspx">
  	 	<providers>
  	 	    ~1~
  	 	        Register your own handler that will be given a chance to
  	 	        rewrite the url. The type must implement INotFoundHandler
- 	 	        <add name="NameOfHandler" type="Your.Handler.Here" />
+ 	 	        <add name="NameOfHandler" type="Your.Handler.Here"/>
  	 	     @1@
  	 	</providers>
  	</bvn404Handler>-->
