Made redirect table name configurable
To change the name of the table, add a key called
Creuna.Redirects.TableName to app/web.config.

--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.nuspec
@@ -20,7 +20,7 @@
     </dependencies>
     <tags>EPiServer redirects</tags>
     <releaseNotes>
-      This patch should ensure that any URLs, both those not found and set up as old uri in the system, are matched regardless of whether they contain escaped characters.
+      This version makes the table name of the table containing the redirects configurable.
     </releaseNotes>
   </metadata>
   <files>
