--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/web.config
@@ -322,8 +322,9 @@ accessKey="local"/>
   <episerver.packaging protectedVirtualPath="~/EPiServer/" protectedPath="modules/_Protected" publicVirtualPath="~/modules/" publicPath="modules"
 installationMode="Code"/>
   <connectionStrings>
-    <add name="EPiServerDB"
+    <!--<add name="EPiServerDB"
       connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|EPiServerDB_a6b9edc1.mdf;Initial Catalog=EPiServerDB_a6b9edc1;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True"
-      providerName="System.Data.SqlClient"/>
+      providerName="System.Data.SqlClient"/>-->
+    <add name="EPiServerDB" connectionString="Data Source=.\SQL_2014;Initial Catalog=nationaltheatret;Integrated Security=False;User ID=nt-dbuser;Password=Random123!;MultipleActiveResultSets=True;Connect Timeout=10" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
