--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.csproj
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/Creuna.Episerver.RedirectHandler.csproj
@@ -91,6 +91,10 @@
     <Compile Include="Core\CustomRedirects\ICachedRedirecter.cs" />
     <Compile Include="Core\CustomRedirects\IRedirecter.cs" />
     <Compile Include="Core\CustomRedirects\RedirecterFactory.cs" />
+    <Compile Include="Core\Data\ContextWrapper.cs" />
+    <Compile Include="Core\Data\CustomRedirectContext.cs" />
+    <Compile Include="Core\Data\DdsRedirectStore.cs" />
+    <Compile Include="Core\Data\IRedirectStore.cs" />
     <Compile Include="Core\Logging\Log4NetLogger.cs" />
     <Compile Include="Core\IRedirectLogger.cs" />
     <Compile Include="Core\PageMovedHandler.cs" />
@@ -100,13 +104,15 @@
     <Compile Include="Core\Logging\LogEvent.cs" />
     <Compile Include="Core\ColorHelper.cs" />
     <Compile Include="Controllers\NotFoundRedirectController.cs" />
-    <Compile Include="Core\Upgrade\Upgrader.cs" />
+    <Compile Include="Migrations\201703072211595_Initial.cs" />
+    <Compile Include="Migrations\201703072211595_Initial.Designer.cs">
+      <DependentUpon>201703072211595_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\RedirectIndexViewData.cs" />
     <Compile Include="Models\Suggestion.cs" />
     <Compile Include="RedirectLoopException.cs" />
-    <Content Include="NotFound.aspx">
-      <SubType>ASPXCodeBehind</SubType>
-    </Content>
+    <Content Include="NotFound.aspx" />
     <EmbeddedResource Include="lang\bvnerrorhandler.xml" />
     <EmbeddedResource Include="lang\bvnerrorhandlerDE.xml" />
     <EmbeddedResource Include="lang\bvnerrorhandlerDK.xml" />
@@ -116,6 +122,9 @@
     <EmbeddedResource Include="lang\bvnerrorhandlerSV.xml" />
     <EmbeddedResource Include="lang\RedirectsGadget.xml">
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703072211595_Initial.resx">
+      <DependentUpon>201703072211595_Initial.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App_Data\GeoLiteCity.dat" />
     <None Include="modules\_protected\CMS\CMS.zip" />
@@ -133,24 +142,18 @@
     <None Include="ClientResources\Scripts\jquery.blockUI.js" />
     <None Include="ClientResources\Scripts\jquery.form.js" />
     <None Include="Creuna.Episerver.RedirectHandler.nuspec" />
-    <None Include="Views\NotFoundRedirect\Administer.ascx">
-      <SubType>ASPXCodeBehind</SubType>
-    </None>
+    <None Include="Views\NotFoundRedirect\Administer.ascx" />
     <None Include="Views\NotFoundRedirect\Ignored.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </None>
     <None Include="Views\NotFoundRedirect\Index.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </None>
-    <None Include="Views\NotFoundRedirect\NotFoundRedirectMenu.ascx">
-      <SubType>ASPXCodeBehind</SubType>
-    </None>
+    <None Include="Views\NotFoundRedirect\NotFoundRedirectMenu.ascx" />
     <None Include="Views\NotFoundRedirect\NotFoundPager.ascx">
       <SubType>ASPXCodeBehind</SubType>
     </None>
-    <None Include="Views\NotFoundRedirect\Redirects.ascx">
-      <SubType>ASPXCodeBehind</SubType>
-    </None>
+    <None Include="Views\NotFoundRedirect\Redirects.ascx" />
     <None Include="Views\NotFoundRedirect\Referers.ascx" />
     <None Include="Views\NotFoundRedirect\Suggestions.ascx">
       <SubType>ASPXCodeBehind</SubType>
@@ -189,7 +192,9 @@
     </None>
     <Content Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Core\Upgrade\" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Castle.Core, Version=3.2.0.0, Culture=neutral, PublicKeyToken=407dd0808d44fbdc, processorArchitecture=MSIL">
       <HintPath>..\..\..\..\packages\Castle.Core.3.2.0\lib\net45\Castle.Core.dll</HintPath>
@@ -200,11 +205,11 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\..\..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\..\..\..\packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\..\..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="EPiServer, Version=9.1.0.0, Culture=neutral, PublicKeyToken=8fe83dea738b45b7, processorArchitecture=MSIL">
