--- a/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/Web.config
@@ -265,6 +265,7 @@
   <episerver.framework updateDatabaseSchema="true">
     <appData basePath="App_Data" />
     <scanAssembly forceBinFolderScan="true" />
+    <licensing licenseFilePath="C:\EPiServer\cms75\License.config" />
     <virtualRoles addClaims="true">
       <providers>
         <add name="Administrators" type="EPiServer.Security.WindowsAdministratorsRole, EPiServer.Framework" />
@@ -387,7 +388,7 @@
   </system.serviceModel>
   <episerver.packaging protectedVirtualPath="~/EPiServer/" protectedPath="modules/_Protected" publicVirtualPath="~/modules/" publicPath="modules" installationMode="Code" />
   <connectionStrings>
-    <add name="EPiServerDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\source\Creuna.Episerver.RedirectHandler\src\Creuna.Episerver.RedirectHandler.TestApp\App_Data\EPiServerDB_c115cb30.mdf;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|EPiServerDB_fb3662eb.mdf;Integrated Security=True;Connect Timeout=30;MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <location path="Views/Plugins">
     <system.web>
