update Cupdate EPiServer.CMS to v 10.1.0

--- a/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/web.config
+++ b/src/Creuna.Episerver.RedirectHandler.TestApp/modules/_protected/Creuna.Episerver.RedirectHandler/web.config
@@ -27,39 +27,79 @@ type="EPiServer.BaseLibrary.ConfigurationHandler,EPiServer.BaseLibrary"/>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Configuration" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Enterprise" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.ImageLibrary" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.LinkAnalyzer" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.Web.WebControls" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="EPiServer.XForms" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
-        <bindingRedirect oldVersion="0.0.0.0-9.1.0.0" newVersion="9.1.0.0"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
       </dependentAssembly>
       <probing privatePath="modulesbin"/>
-    <dependentAssembly><assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect
-oldVersion="0.0.0.0-9.2.0.0" newVersion="9.2.0.0"/></dependentAssembly><dependentAssembly><assemblyIdentity name="EPiServer.Shell.UI"
-publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect oldVersion="0.0.0.0-9.2.0.0" newVersion="9.2.0.0"/></dependentAssembly><dependentAssembly><assemblyIdentity
-name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect oldVersion="0.0.0.0-9.2.0.0" newVersion="9.2.0.0"/></dependentAssembly><dependentAssembly><assemblyIdentity
-name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0"/></dependentAssembly><dependentAssembly><assemblyIdentity
-name="EPiServer.Packaging" publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect oldVersion="0.0.0.0-3.2.3.0" newVersion="3.2.3.0"/></dependentAssembly></assemblyBinding>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Cms.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Shell.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.UI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Packaging.CmdAPI" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-1.0.0.0" newVersion="1.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Packaging" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.0" newVersion="3.3.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.ApplicationModules" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Data.Cache" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Data" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Events" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Framework" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="EPiServer.Licensing" publicKeyToken="8fe83dea738b45b7" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-10.1.0.0" newVersion="10.1.0.0"/>
+      </dependentAssembly>
+    <dependentAssembly><assemblyIdentity name="EPiServer.Shell" publicKeyToken="8fe83dea738b45b7" culture="neutral"/><bindingRedirect
+oldVersion="0.0.0.0-10.0.2.0" newVersion="10.0.2.0"/></dependentAssembly></assemblyBinding>
   </runtime>
   <episerver>
     <applicationSettings httpCacheability="Public" pageValidateTemplate="false" uiShowGlobalizationUserInterface="true" uiUrl="~/EPiServer/CMS/"
@@ -88,7 +128,7 @@ type="EPiServer.Web.Hosting.VirtualPathNonUnifiedProvider, EPiServer.Framework"/
     <geolocation defaultProvider="maxmind">
       <providers>
         <add name="maxmind" type="EPiServer.Personalization.Providers.MaxMind.GeolocationProvider, EPiServer.ApplicationModules"
-          databaseFileName="App_Data\GeoLiteCity.dat"/>
+databaseFileName="App_Data\GeoLiteCity.dat"/>
       </providers>
     </geolocation>
   </episerver.framework>
@@ -162,32 +202,31 @@ pageParserFilterType="System.Web.Mvc.ViewTypeParserFilter, System.Web.Mvc, Versi
       </properties>
       <providers>
         <add name="DefaultProfileProvider"
-          type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          connectionStringName="EPiServerDB" applicationName="/"/>
+type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+connectionStringName="EPiServerDB" applicationName="/"/>
       </providers>
     </profile>
     <membership defaultProvider="MultiplexingMembershipProvider" userIsOnlineTimeWindow="10" hashAlgorithmType="HMACSHA512">
       <providers>
         <clear/>
         <add name="MultiplexingMembershipProvider" type="EPiServer.Security.MultiplexingMembershipProvider, EPiServer.Framework"
-          provider1="SqlServerMembershipProvider" provider2="WindowsMembershipProvider"/>
+provider1="SqlServerMembershipProvider" provider2="WindowsMembershipProvider"/>
         <add name="WindowsMembershipProvider" type="EPiServer.Security.WindowsMembershipProvider, EPiServer" deletePrefix="BUILTIN\" searchByEmail="true"/>
         <add name="SqlServerMembershipProvider"
-          type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          connectionStringName="EPiServerDB" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false"
-          requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0"
-          passwordAttemptWindow="10" applicationName="/"/>
+type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+connectionStringName="EPiServerDB" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
+maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/"/>
       </providers>
     </membership>
     <roleManager enabled="true" defaultProvider="MultiplexingRoleProvider" cacheRolesInCookie="true">
       <providers>
         <clear/>
         <add name="MultiplexingRoleProvider" type="EPiServer.Security.MultiplexingRoleProvider, EPiServer.Framework" provider1="SqlServerRoleProvider"
-          provider2="WindowsRoleProvider" providerMap1="SqlServerMembershipProvider" providerMap2="WindowsMembershipProvider"/>
+provider2="WindowsRoleProvider" providerMap1="SqlServerMembershipProvider" providerMap2="WindowsMembershipProvider"/>
         <add name="WindowsRoleProvider" applicationName="/" type="EPiServer.Security.WindowsRoleProvider, EPiServer"/>
         <add name="SqlServerRoleProvider"
-          type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-          connectionStringName="EPiServerDB" applicationName="/"/>
+type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
+connectionStringName="EPiServerDB" applicationName="/"/>
       </providers>
     </roleManager>
   </system.web>
@@ -325,6 +364,8 @@ installationMode="Code"/>
     <!--<add name="EPiServerDB"
       connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|EPiServerDB_a6b9edc1.mdf;Initial Catalog=EPiServerDB_a6b9edc1;Connection Timeout=60;Integrated Security=True;MultipleActiveResultSets=True"
       providerName="System.Data.SqlClient"/>-->
-    <add name="EPiServerDB" connectionString="Data Source=.\SQL_2014;Initial Catalog=nationaltheatret;Integrated Security=False;User ID=nt-dbuser;Password=Random123!;MultipleActiveResultSets=True;Connect Timeout=10" providerName="System.Data.SqlClient" />
+    <add name="EPiServerDB"
+connectionString="Data Source=.\SQL_2014;Initial Catalog=nationaltheatret;Integrated Security=False;User ID=nt-dbuser;Password=Random123!;MultipleActiveResultSets=True;Connect Timeout=10"
+providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
